--- a/krypto_v2/src/style/reset.css
+++ b/krypto_v2/src/style/reset.css
@@ -23,6 +23,7 @@ time, mark, audio, video {
 	/* font: inherit; */
 	font-weight: inherit;
 	vertical-align: baseline;
+	box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
