--- a/krypto_v2/src/style/style.module.scss
+++ b/krypto_v2/src/style/style.module.scss
@@ -1,3 +1,8 @@
+:root {
+  // --color_green-2:#75FF9C;
+  --color_green-2: #75FF9C;
+}
+
 .navigation {
   display: flex;
   // background-color: black;
@@ -25,6 +30,7 @@
 
   li {
     display: inline-block;
+
     a {
       // background-color: #333;
       color: white;
@@ -39,10 +45,11 @@
       &.active {
         border-color: #ffff;
       }
+
       text-decoration: none;
       color: white;
-      &:visited {
-      }
+
+      &:visited {}
     }
   }
 }
@@ -51,17 +58,77 @@
   background-color: aqua;
 }
 
-.home_hero__section {
-  background-image: url("/images/HERO_SECTION.jpg");
-  background-size: contain;
-  background-repeat: no-repeat;
+
+
+.home_frame__top,
+.home_frame__bottom {
   border-radius: 30px;
-  height: 812px;
+  position: relative;
+
+  &:before {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url("/images/HERO_SECTION.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: inherit;
+    top: 0px;
+    left: 0px;
+  }
+
+  &:after {
+    z-index: -2;
+    content: '';
+    top: -1px;
+    left: -1px;
+    position: absolute;
+    width: calc(2px + 100%);
+    height: calc(2px + 100%);
+    background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.5) 0.55%, rgba(255, 255, 255, 0.4) 57%, rgba(255, 255, 255, 0) 92.35%);
+    border-radius: inherit;
+  }
+
+  min-height: 350px;
+
+}
+
+.home_frame__bottom {
+  &:before {
+    transform: rotate(180deg);
+    background-position: 0 -250px;
+  }
+
+  &:after {
+    transform: rotate(180deg);
+  }
+}
+
+.home_hero__section {
+  height: 742px;
   padding: 73px 0 0 64px;
   color: white;
-  position: relative;
+
+  // border: 1px solid red;
+  // border: 10px solid;
+  // border-image-slice: 1;
+  // // border-width: 5px;
+  // border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
+  // border-image-source: linear-gradient(179.37deg, rgba(255, 255, 255, 0.3) 0.55%, rgba(255, 255, 255, 0.18) 56.94%, rgba(255, 255, 255, 0) 92.35%);
+  // border-radius: 50px; /*1*/
+  // border: 10px solid transparent; /*2*/
+  // background: linear-gradient(45deg,red,blue) border-box; /*3*/
+  // -webkit-mask: /*4*/
+  //    linear-gradient(#fff 0 0) padding-box, 
+  //    linear-gradient(#fff 0 0);
+  // -webkit-mask-composite: xor; /*5'*/
+  //         mask-composite: exclude; /*5*/
+
   .home_hero__section_text {
     width: 60%;
+
     h2 {
       font-size: 64px;
       line-height: 64px;
@@ -69,28 +136,34 @@
 
       letter-spacing: -0.04em;
     }
+
     p {
       margin-top: 46px;
       font-size: 18px;
       line-height: 25px;
     }
   }
+
   .home_hero__section_nav {
     margin-top: 46px;
+
     li {
       display: inline-block;
       margin-right: 15px;
+
       a {
         padding: 6px 10px;
         border: 1px solid #ffffff;
         border-radius: 11px;
         text-decoration: none;
+
         &:visited {
           color: inherit;
         }
       }
     }
   }
+
   figure {
     background-image: url("/images/home.hero.jpg");
     background-size: cover;
@@ -104,46 +177,210 @@
     border-radius: 30px;
   }
 }
-.home_discover__pool {
-  .home_discover__pool__title {
-    text-align: center;
-    h3 {
-        font-size: 13px;
-        line-height: 18px;
-        color: #79FFAF;
-        text-transform: uppercase;
-    }
-    h2 {
-        font-size: 38px;
-        line-height: 44px;
-    }
+
+.home__title {
+  text-align: center;
+  margin-top: 70px;
+  margin-bottom: 70px;
+
+  h3 {
+    font-size: 13px;
+    line-height: 18px;
+    color: var(--color_green-2);
+    text-transform: uppercase;
   }
-  .home_discover__pool__content{
-    display: flex;
-    gap: 10px;
-    margin-top: 74px;
-    li{
+
+  h2 {
+    font-size: 38px;
+    line-height: 44px;
+  }
+}
+
+
+.home_discover__pool {
+  .home_discover__pool__content {
+    // margin-top: 74px;
+    height: 516px;
+
+    .loader {
+      position: relative;
+      width: 100%;
+    }
+
+    ul {
+
+      display: flex;
+      gap: 10px;
+
+      li {
         position: relative;
-        background-color: green;
+        background-color: var(--color_green-2);
         // background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 37.5%, rgba(0, 0, 0, 0.9) 92.71%),url('/images/discover__pool_1.jfif');
         // background-image: url(attr(img));
         background-size: cover;
         flex-grow: 1;
-        flex-basis: min-content;
+        flex: 1 1 0px;
+        // flex-basis: min-content;
         border-radius: 30px;
-        height: 516px;
+        height: 521px;
+
         overflow: hidden;
         padding: 18px;
-        &:after{
-            content:'';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 37.5%, rgba(0, 0, 0, 0.9) 92.71%);
+
+        &.see_more {
+
+          background: none;
+          border: 1px solid var(--color_green-2);
         }
 
+        &:after {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-image: linear-gradient(180deg, rgba(0, 0, 0, 0) 37.5%, rgba(0, 0, 0, 0.9) 92.71%);
+        }
+
+        .invested {
+          position: absolute;
+          background: linear-gradient(90deg, rgba(159, 255, 221, 0.3) 0%, rgba(121, 255, 175, 0.3) 47.4%, rgba(117, 255, 156, 0.3) 100%);
+          border-radius: 20px;
+          padding: 5px 10px;
+          font-size: 13px;
+          line-height: 18px;
+          border: 1px solid var(--color_green-2);
+
+        }
+
+        .content {
+          display: flex;
+          flex-direction: column;
+          height: 100%;
+          z-index: 1;
+          position: relative;
+
+          h1 {
+            margin-top: 256px;
+            // flex-grow: 2;
+            font-size: 28px;
+            line-height: 34px;
+            vertical-align: bottom;
+          }
+
+          p {
+            font-size: 13px;
+            line-height: 18px;
+
+            b {
+              font-weight: inherit;
+              color: var(--color_green-2);
+            }
+          }
+
+          .diversification {
+            margin: 10px 0;
+
+            p {
+              span {
+                margin-right: 20px;
+                display: inline-block;
+                position: relative;
+
+                &:not(:last-child):after {
+                  content: '';
+                  position: absolute;
+                  width: 1px;
+                  right: -10px;
+                  height: 12px;
+                  top: 4px;
+                  background-color: white;
+                }
+              }
+            }
+          }
+        }
+
+      }
     }
+  }
+}
+
+.home_discover__information {
+  // background-color: red;
+}
+
+.home_whyinvest {
+  width: 1040px;
+  margin: auto;
+  margin-bottom: 120px;
+
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+
+    gap: 20px;
+    li {
+      width: calc(50% - 10px);
+
+      b {
+        color: var(--color_green-2);
+      }
+
+      h1 {
+        background-image: url('/images/Iconsax/award.svg');
+        background-repeat: no-repeat;
+        background-position: 0 50%;
+        padding-left: 25px;
+        font-size: 18px;
+        line-height: 25px;
+        margin-bottom: 30px;
+        position: relative;
+        &:after{
+          content:'';
+          left: 0;
+          bottom:0;
+          position: absolute;
+          width: 100%;
+          height: 1px;
+          bottom:-15px;
+          background-color: white;
+        }
+      }
+
+      p {
+        font-size: 16px;
+        line-height: 22px;
+      }
+    }
+  }
+}
+
+.home_whoweare {
+  width: 887px;
+  margin: auto;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.home_partners, .home_press {
+  margin-bottom: 120px;
+  ul{
+    display: flex;
+    gap: 10px;
+    justify-content:center;
+    li{
+      width: 175px;
+      height: 175px;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: 50%;
+    }
+  }
+  p{
+    text-align: center;
   }
 }
