--- a/krypto_v2/src/style/style.scss
+++ b/krypto_v2/src/style/style.scss
@@ -1,7 +1,26 @@
 
 
+
 @import 'reset.css';
 @import 'fonts.css';
+
+
+:root {
+    --color_KRYPTO-GREEN: #b5d09f;
+    --color_KRYPTO-SEC: #2d584e;
+    --color_BACKGROUND: #00120e;
+    --color_BACKGROUND-LIGHT: #001712;
+    --color_BACKGROUND-LIGHT-2: #04251d;
+    --color_SMALL-TEXT: #79ffaf;
+    --color_BUTTON: #00ef8d;
+    --color_BACKGROUND-LIGHTER: #04251d;
+  }
+  
+
+
+
+
+
 
 p.visible{
     display: block !important;
@@ -37,6 +56,7 @@ a{
 .appContainer{
     max-width: 1360px;
     margin: auto;
+    padding: 0 10px;
     position: relative;
     /* background-color: #00120E; */
 }
@@ -46,12 +66,19 @@ content{
     display: block;
 }
 .fade-in {
+    transition: opacity 1s;
+    opacity: 0.0;
+}
+.fade-in.appear {
+    opacity: 1;
+}
+.slide-in {
     transition: opacity 1s, transform 0.5s;
     transition-delay: 0.1s;
     opacity: 0.0;
     transform: translateY(20px);
 }
-.fade-in.appear {
+.slide-in.appear {
     opacity: 1;
     transform: translateY(0);
 }
