--- a/krypto_v2/src/style/style.module.scss
+++ b/krypto_v2/src/style/style.module.scss
@@ -1,7 +1,8 @@
-
 p,
-span {
-  b, strong {
+span,
+h1 {
+  b,
+  strong {
     font-weight: inherit;
     color: var(--color_SMALL-TEXT);
   }
@@ -84,6 +85,7 @@ span {
 
       &.active {
         border-color: #ffff;
+        pointer-events: none;
       }
 
       text-decoration: none;
@@ -99,6 +101,32 @@ span {
   background-color: aqua;
 }
 
+.frame__top{
+    border-radius: 30px;
+    position: relative;
+    background-color: var(--color_BACKGROUND-LIGHT);  
+    &:after {
+        z-index: -2;
+        content: "";
+        top: -1px;
+        left: -1px;
+        position: absolute;
+        width: calc(2px + 100%);
+        height: calc(2px + 100%);
+        z-index: -1;
+    
+        //
+        background-image: linear-gradient(
+          180deg,
+          #9fffdd 0%,
+          rgba(121, 255, 175, 0.7) 27.88%,
+          rgba(117, 255, 156, 0.2) 55.05%,
+          rgba(117, 255, 156, 0) 100%
+        );
+    
+        border-radius: inherit;
+      }
+}
 .section_frame__top,
 .section_frame__bottom {
   border-radius: 30px;
@@ -310,10 +338,10 @@ span {
   &:after {
     display: none;
   }
-  //   
+  //
 }
 .pool_card_more_soon {
-    padding: 30px !important;
+  padding: 30px !important;
   & > span {
     &:before {
       content: "";
@@ -455,10 +483,6 @@ span {
     gap: 20px;
     li {
       width: calc(50% - 10px);
-
-      b {
-        color: var(--color_SMALL-TEXT);
-      }
 
       h1 {
         background-image: url("/images/Iconsax/award.svg");
@@ -735,3 +759,155 @@ span {
     }
   }
 }
+
+.home_whoweare_people {
+    margin: 76px auto 0 auto;
+    padding-bottom: 100px;
+    width: calc(200px * 3 + 20px * 2);
+    position: relative;
+    & > .home_whoweare_people_arrow_left,
+    & > .home_whoweare_people_arrow_right {
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      top: 50px;
+      background-position: 50%;
+      background-repeat: no-repeat;
+      cursor: pointer;
+      transition: opacity 0.25s;
+      &:hover {
+        opacity: 0.5;
+      }
+    }
+    & > .home_whoweare_people_arrow_left {
+      left: -50px;
+      background-image: url("/images/Iconsax/arrowleft.svg");
+    }
+    & > .home_whoweare_people_arrow_right {
+      right: -50px;
+      background-image: url("/images/Iconsax/arrowright.svg");
+    }
+    & > .home_whoweare_people_container {
+      overflow: hidden;
+      & > ul {
+        margin: auto;
+        display: flex;
+        flex-wrap: nowrap;
+        gap: 20px;
+        transition: transform 0.25s;
+        & > li {
+          flex: 0 0 200px;
+          overflow: hidden;
+          text-align: center;
+          font-size: 10px;
+          white-space: nowrap;
+          & > img {
+            border-radius: 50%;
+            width: 160px;
+            filter: grayscale(0.9);
+          }
+          & > h1 {
+            font-size: 18px;
+            line-height: 25px;
+            // position: absolute;
+          }
+          & > h2 {
+            font-size: 13px;
+            line-height: 18px;
+            color: var(--color_SMALL-TEXT);
+          }
+        }
+      }
+    }
+  }
+
+  
+
+
+
+  .home_testimonials {
+    margin: 76px auto 0 auto;
+    padding-bottom: 100px;
+    width: calc(390px * 3 + 40px * 2);
+    position: relative;
+    & > .home_testimonials_arrow_left,
+    & > .home_testimonials_arrow_right {
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      top: 50px;
+      background-position: 50%;
+      background-repeat: no-repeat;
+      cursor: pointer;
+      transition: opacity 0.25s;
+      &:hover {
+        opacity: 0.5;
+      }
+    }
+    & > .home_testimonials_arrow_left {
+      left: -50px;
+      background-image: url("/images/Iconsax/arrowleft.svg");
+    }
+    & > .home_testimonials_arrow_right {
+      right: -50px;
+      background-image: url("/images/Iconsax/arrowright.svg");
+    }
+    & > .home_testimonials_container {
+      overflow: hidden;
+      & > ul {
+        margin: auto;
+        display: flex;
+        flex-wrap: nowrap;
+        gap: 40px;
+        transition: transform 0.25s;
+        & > li {
+          flex: 0 0 390px;
+          height: 226px;
+        //   background: #001712;
+border-radius: 30px;
+position: relative;
+// width: px;
+// left: 441px;
+// top: 0px;
+// border-radius: 30px;
+// padding: 30px;
+
+        //   overflow: hidden;
+        //   text-align: center;
+          font-size: 10px;
+          padding: 30px;
+          white-space: nowrap;
+          & > img {
+            border-radius: 50%;
+            width: 45px;
+            filter: grayscale(0.9);
+            position: absolute;
+            left: 30px;
+            // top: 30px;
+        }
+        & > h1 {
+            font-size: 18px;
+            line-height: 25px;
+            position: absolute;
+            left: 90px;
+            // position: absolute;
+          }
+          & > h2 {
+              font-size: 13px;
+              line-height: 18px;
+              color: var(--color_SMALL-TEXT);
+              position: absolute;
+              top: 55px;
+              left: 90px;
+            }
+            & > p {
+                margin-top: 65px;
+                font-size: 18px;
+                line-height: 25px;
+                white-space: normal;
+            }
+        }
+      }
+    }
+  }
+  
