--- a/krypto_v2/src/style/style.scss
+++ b/krypto_v2/src/style/style.scss
@@ -35,6 +35,7 @@ body{
     margin: 0;
     padding: 0;
     margin-top: 110px;
+    overflow-y: scroll;
 }
 #root{
 }
@@ -44,13 +45,6 @@ a{
 }
 [data-scrollbar] {
     height: 100vh;
-}
-
-.purpleSquare
-{
-    width: 200px;
-    height: 200px;
-    background-color: mediumpurple;
 }
 
 .appContainer{
@@ -76,7 +70,7 @@ content{
     transition: opacity 1s, transform 0.5s;
     transition-delay: 0.1s;
     opacity: 0.0;
-    transform: translateY(20px);
+    transform: translateY(10px);
 }
 .slide-in.appear {
     opacity: 1;
@@ -86,7 +80,8 @@ content{
 footer{
     margin-top: 80px;
     margin-bottom: 30px;
-    padding-top: 50px;
+    // padding-top: 50px;
+    padding-top: 15px;
     color: #26403A;
     border-top: 1px solid currentColor;
     font-size: 16px;
