--- a/krypto_v2/src/style/style.scss
+++ b/krypto_v2/src/style/style.scss
@@ -1,83 +1,86 @@
+@import 'variables';
 
 
 
-@import 'reset.css';
-@import 'fonts.css';
-
-
-:root {
-    --color_KRYPTO-GREEN: #b5d09f;
-    --color_KRYPTO-SEC: #2d584e;
-    --color_BACKGROUND: #00120e;
-    --color_BACKGROUND-LIGHT: #001712;
-    --color_BACKGROUND-LIGHT-2: #04251d;
-    --color_SMALL-TEXT: #79ffaf;
-    --color_BUTTON: #00ef8d;
-    --color_BACKGROUND-LIGHTER: #04251d;
-  }
-  
-
-
-
-
-
-
-p.visible{
+p.visible {
     display: block !important;
 }
-html{
+
+html {
     font-family: "manrope";
     font-weight: 400;
-    background-color:#00120E;
-    color:#fff;
+    background-color: #00120E;
+    color: #fff;
 }
-body{
+
+body {
     margin: 0;
     padding: 0;
     margin-top: 110px;
     overflow-y: scroll;
 }
-#root{
+
+#root {
+    width: 100%;
+    overflow: hidden;
 }
-a{
+
+a {
     text-decoration: none;
     color: inherit;
 }
+
 [data-scrollbar] {
     height: 100vh;
 }
 
-.appContainer{
-    max-width: 1360px;
+.appContainer {
+    max-width: $width_main;
     margin: auto;
     padding: 0 10px;
     position: relative;
     /* background-color: #00120E; */
 }
 
-content{
+content {
     min-height: calc(100vh - 100px);
     display: block;
 }
+
 .fade-in {
-    transition: opacity 1s;
+    // transition: opacity 0s;
+    transition: opacity 0.15s;
     opacity: 0.0;
+
+    // &:before,
+    // &:after {
+    //     transition: opacity 1s;
+    //     opacity: 0.0;
+    // }
 }
+
 .fade-in.appear {
+    transition: opacity 1s;
     opacity: 1;
+    // &:before,
+    // &:after {
+    //     opacity: 1;
+    // }
 }
+
 .slide-in {
     transition: opacity 1s, transform 0.5s;
     transition-delay: 0.1s;
     opacity: 0.0;
     transform: translateY(10px);
 }
+
 .slide-in.appear {
     opacity: 1;
     transform: translateY(0);
 }
 
-footer{
+footer {
     margin-top: 80px;
     margin-bottom: 30px;
     // padding-top: 50px;
@@ -86,22 +89,26 @@ footer{
     border-top: 1px solid currentColor;
     font-size: 16px;
     position: relative;
-// line-height: 22px;
-    .footer_legals{
+
+    // line-height: 22px;
+    .footer_legals {
         display: flex;
-        gap:30px;
-        li{
+        gap: 30px;
+
+        li {
             display: inline-block;
-        }   
+        }
     }
-    .footer_social{
+
+    .footer_social {
         position: absolute;
         right: 0;
         top: 15px;
         display: flex;
-        gap:20px;
-        li{
+        gap: 20px;
+
+        li {
             display: inline-block;
-        }   
+        }
     }
 }
