--- a/dev/src/style/style.scss
+++ b/dev/src/style/style.scss
@@ -12,12 +12,21 @@ html {
     background-color: #00120E;
     color: #fff;
 }
+small{
+    font-size: 0.7em;
+}
+// b, strong{
+//     font-weight: bold!important;
+// }
 
 body {
     margin: 0;
     padding: 0;
     margin-top: 110px;
     overflow-y: scroll;
+    @media only screen and (max-width: $width_breakpoint3) {
+        margin-top: 90px;
+      }
 }
 
 #root {
