--- a/dev/src/style/fonts.css
+++ b/dev/src/style/fonts.css
@@ -1,23 +1,23 @@
-
-/* @font-face {
+@font-face {
+  font-family: "manrope";
+  src: url(/fonts/Manrope/Manrope-Light.ttf) format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
+@font-face {
     font-family: "manrope";
     src: url(/fonts/Manrope/Manrope-Regular.ttf) format("truetype");
     font-style: normal;
-    font-weight: bold;
-} */
-
-@font-face {
-    font-family: "manrope";
-    src: url(/fonts/Manrope/Manrope-Light.ttf) format("truetype");
-    font-style: normal;
-    font-weight: normal;
+    font-weight: 600;
 }
 @font-face {
     font-family: "manrope";
     src: url(/fonts/Manrope/Manrope-Bold.ttf) format("truetype");
     font-style: normal;
-    font-weight: bold;
+    font-weight:bold;
 }
+/*
+ */
 /* @font-face {
     font-family: "manrope";
     src: url(/fonts/Manrope/Manrope-ExtraBold.ttf) format("truetype");
