--- a/dev/src/style/reset.css
+++ b/dev/src/style/reset.css
@@ -48,3 +48,12 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+*:focus {
+	box-shadow: none !important;
+  }
+  
+  *[data-focus] {
+	box-shadow: none !important;
+  }
