--- a/dev/src/style/_variables.scss
+++ b/dev/src/style/_variables.scss
@@ -26,4 +26,14 @@ $color_BACKGROUND:#00120e;
 
     --max-height-filters:400px;
 
+    --title-font-size:38px;
+    --title-line-height:44px;
+    --title-font-size-s:30px;
+    --title-line-height-s:36px;
+
+    --big-title-font-size:64px;
+    --big-title-line-height:64px;
+    --big-title-font-size-s:44px;
+    --big-title-line-height-s:44px;
+
 }
